--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,14 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
+# dist folder is where we build the app.. and this is a openshift git repo.. that we use to publish the app
+dist
+
+#tmp folder
+.tmp
+
+client/bower_components/
+
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
