--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "karma-script-launcher": "~0.1.0",
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-ng-jade2js-preprocessor": "^0.1.2",
-    "karma-jasmine": "~0.1.5",
+    "karma-jasmine": "~0.2.0",
     "karma-chrome-launcher": "~0.1.3",
     "requirejs": "~2.1.11",
     "karma-requirejs": "~0.2.1",
@@ -79,7 +79,8 @@
     "karma": "~0.12.9",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "supertest": "~0.11.0",
-    "should": "~3.3.1"
+    "should": "~3.3.1",
+    "timecop": "git://github.com/jamesarosen/Timecop.js.git"
   },
   "engines": {
     "node": ">=0.10.0"
